# keepawake

./: .gitignore  Cargo.toml  Info.plist  Makefile  README.md
.github/workflows/: release.yml
assets/: AppIcon.icns
src/: cli.rs  main.rs  schedule.rs  tray.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
